--- a/notebooks/plot.contacts.Rmd
+++ b/notebooks/plot.contacts.Rmd
@@ -20,14 +20,21 @@ output:
 
 # Prepare data
 
+```{r knitr}
+library(knitr)
+knitr::opts_chunk$set(
+    dev=c('png', 'pdf', 'tiff'),
+    dpi=300
+)
+```
 Set up file locations
-```{r results=FALSE}
+```{r locations, results=FALSE}
 library(here)
 BASE_DIR=here()
 source(file.path(BASE_DIR, 'scripts/locations.R'))
 ```
 Load dependencies
-```{r}
+```{r deps}
 library(tidyverse)
 library(magrittr)
 source(file.path(BASE_DIR, 'scripts/utils.data.R'))
@@ -35,12 +42,12 @@ source(file.path(BASE_DIR, 'scripts/utils.qc.R'))
 source(file.path(BASE_DIR, 'scripts/utils.plot.R'))
 ```
 Load sample metadata
-```{r message=FALSE, rows.print=5}
+```{r load_metadata, message=FALSE, rows.print=5}
 sample.metadata <- load_sample_metadata()
 sample.metadata
 ```
 Load genome coverage from `cooltools coverage`
-```{r rows.print=5}
+```{r load_coverage, rows.print=5}
 genome.coverage <- 
     check_cached_results( 
         results_file=NULL,
