Update automatic plot tabbing in Rmarkdown
- Now can programatically generated nested, named tabs for figures
- each tab corresponds to all data with a specific value for each column
specified in group_cols.
- i.e. if you have 3 cols (Genotype, Celltype, Sample.ID) with 2,3,4
levels respectively then it creates nested tabs, with each leaf tab
containing the figure from data for a specific
Sample.ID+Genotype+Celltype value
- groups can be completely arbitrary
- produces 1 plot for all exisiting combinations of values across all
group_cols
- recursion actually works lol

--- a/notebooks/matrix.QC.Rmd
+++ b/notebooks/matrix.QC.Rmd
@@ -13,7 +13,7 @@ output:
 
 <style type="text/css">
 .main-container {
-  <!-- max-width: 1800px !important; -->
+  max-width: 1800px !important;
   margin-left: auto;
   margin-right: auto;
 }
@@ -158,12 +158,15 @@ pair.stats.list$distance.stats %>%
             str_replace_all(fixed('+'), '>') %>% 
             str_replace_all(fixed('-'), '<')
     ) %>% 
-    left_join(sample.metadata, by='Sample.ID') %>% 
-    make_tab_per_group(
-        group_col='Sample.ID',
-        col_header=FALSE,
-        max_lvl=2,
-        plot_fnc=plot_pair.orientation_lineplot,
+    separate_wider_delim(
+        Sample.ID,
+        delim=fixed('.'),
+        names=c('Edit', 'Genotype', 'SampleNumber', 'Celltype'),
+        cols_remove=FALSE
+    ) %>% 
+    make_nested_plot_tabs(
+        group_cols=c('Celltype', 'Genotype', 'Sample.ID'),
+        plot_fnc=plot_pair.orientation_lineplot
     )
 ```
 
@@ -291,10 +294,14 @@ tmp_plot <- function(plot.df){
 }
 plot.df %>% 
     filter(metric == "% Total Contacts") %>% 
-    make_tab_per_group(
-        group_col='Sample.ID',
-        col_header=FALSE,
-        max_lvl=3,
+    separate_wider_delim(
+        Sample.ID,
+        delim=fixed('.'),
+        names=c('Edit', 'Genotype', 'SampleNumber', 'Celltype'),
+        cols_remove=FALSE
+    ) %>% 
+    make_nested_plot_tabs(
+        group_cols=c('Celltype', 'Genotype', 'Sample.ID'),
         plot_fnc=tmp_plot
     )
 ```
