--- a/notebooks/replicate.robinson.results.Rmd
+++ b/notebooks/replicate.robinson.results.Rmd
@@ -1,9 +1,10 @@
 ---
-title: "QC stats for 16p HiC samples"
+title: "Replicate Reuslts from Weiner et al. 2022"
 author: "Siddharth Reed"
 date: "`r Sys.Date()`"
 output: 
     html_document:
+        keep_md: yes
         toc: true
         toc_float: true
         theme: paper
@@ -20,23 +21,34 @@ output:
 
 # Prepare data
 
+```{r knitr}
+library(knitr)
+knitr::opts_chunk$set(
+    dev=c('png', 'pdf', 'tiff'),
+    dpi=300
+)
+```
 Set up file locations
-```{r results=FALSE}
+```{r locations, results=FALSE}
 library(here)
 BASE_DIR=here()
 source(file.path(BASE_DIR, 'scripts/locations.R'))
 ```
 Load dependencies
-```{r}
+```{r deps}
 library(tidyverse)
 library(magrittr)
 source(file.path(BASE_DIR, 'scripts/utils.data.R'))
-source(file.path(BASE_DIR, 'scripts/utils.qc.R'))
 source(file.path(BASE_DIR, 'scripts/utils.plot.R'))
+source(file.path(BASE_DIR, 'scripts/utils.robinson.R'))
 ```
 Load sample metadata
-```{r message=FALSE, rows.print=5}
-sample.metadata <- load_sample_metadata()
+```{r load_metadata, message=FALSE, rows.print=5}
+RESOLUTION <- 100000  # used in the original paper
+sample.metadata <- 
+    load_sample_metadata() %>%
+    select(-c(Sample.Name)) %>%
+    filter(Celltype == 'NSC')
 sample.metadata
 ```
 Load contact matrices for each file
@@ -47,15 +59,25 @@ contacts.df <-
         range1s='chr16',
         resolutions=c(RESOLUTION),
     ) %>%
-    left_join(
-        sample.metadata,
-        by='Sample.ID'
-    ) %>%
-    mutate(Sequencing.Run=ifelse(is.na(Sequencing.Run), 'Merged', Sequencing.Run))
-contacts.df
+    mutate(is.Merged=grepl('Merged', Sample.ID)) %>%
+    separate_wider_delim(
+        Sample.ID,
+        delim=fixed('.'),
+        cols_remove=FALSE,
+        names=c(
+            'Edit',
+            'Genotype',
+            'SampleNumber',
+            'Celltype'
+        )
+    )
 ```
-Prepare data for plotting
-```{r}
+
+# Plot IFs of ELISE vs CTRL regions 
+
+Prepare data for plotting, count how many bin-pairs there are per annotated category
+```{r plot_df, rows.print=50}
+# Annotate all regions each for each bin and bin-pair (contacts, 1 per row)
 plot.df <- 
     check_cached_results(
         results_file=ROBINSON_REPLICATION_DATA_FILE,
@@ -86,59 +108,27 @@ plot.df <-
 plot.df %>% dplyr::count(Sample.ID, region)
 ```
 
+## Merged Only
 
-# Plot IFs of ELISE vs CTRL regions 
+## Invididual Libraries
 
 ```{r}
-plot.df %>%
-    filter(region != '16.all.Distance.Matched.Control') %>%
-    # filter(count < 200) %>% 
-    nest(interactions=-c(normalization, min_count, plot_file)) %>%
-    rowwise() %>%
-    mutate(
-        height=10,
-        width=10,
-        independent='y',
-        scales='free_y',
-        p_size=2.5,
-        n_size=2.75,
-        n_pos=ifelse(normalization == 'NONE', 0, 3e-4),
-        test_offset_y=
-            case_when(
-                normalization == 'cis.ice' ~ 5e-4,
-                normalization == 'NONE' ~ 2,
-                normalization == 'cis.vc' ~ 10,
-            ),
-        expansion=
-            ifelse(
-                normalization == 'NONE',
-                list(c(4e-2, 1e-2, 10e-2, 1e-2 )), 
-                list(c(5e-3, 1e-4,  5e-2, 1e-4))
-            )
-    ) %>% 
-    pmap(
-        .l=.,
-        .f=plot_wrapper,
-    )
+contacts.df
 ```
 
 ```{r} 
 plot.df %>% 
     filter(Replicate.ID == 'Merged') %>% 
-    filter(normalization == 'NONE') %>% 
+    filter(weight == 'NONE') %>% 
     filter(min_count == 1) %>% 
-    filter(region %in% c('16p11.2 CNV - Telomere', '16p.Distance.Matched.Control')) %>%
+    # filter(region %in% c('16p11.2 CNV - Telomere', '16p.Distance.Matched.Control')) %>%
     plot_elise_boxplot(
         independent='y',
         scales='free_y',
         y_val='count',
-        p_size=2.5, n_size=2.75, test_offset_y=5, expansion=1e-2 * c(3, 1, 5, 1)
-    ) %>%
-    ggsave(
-        glue('{PLOT_DIR}/presentation.boxplot.pdf'),
-        .,
-        width=10,
-        height=6,
-        units='in'
+        p_size=2.5,
+        n_size=2.75,
+        test_offset_y=5,
+        expansion=1e-2 * c(3, 1, 5, 1)
     )
 ```
