--- a/notebooks/replicate.robinson.results.Rmd
+++ b/notebooks/replicate.robinson.results.Rmd
@@ -104,12 +104,13 @@ colors.and.titles <-
     ~region, ~region.title, ~region.color,
     'chr16p.deletion vs chr16p.telomere', '16p11.2 CNV - Telomere',                     '#526ab1',
     'chr16p vs chr16p',                   '16p.Distance-matched control',               '#e32528',
-    'chr16p vs chr16q',                   '16p-q.Distance-matched control',             '#9e1517',
     'chr16q vs chr16q',                   '16q.Distance-matched control',               '#5a0c10',
+    'chr16p vs chr16q',                   '16p-q.Distance-matched control',             '#9e1517',
     'chr16p.deletion vs chr16p',          '16p11.2 CNV - 16p.Distance-matched control', '#8000ff',
     'chr16p.deletion vs chr16q',          '16p11.2 CNV - 16q.Distance-matched control', '#bf80ff',
     'chr16p.telomere vs chr16p',          'Telomere - 16p.Distance-matched control',    '#330066',
-    )
+    ) %>% 
+    mutate(region.title=factor(region.title))
 plot.df <- 
     annotated.contacts.df %>% 
     select(
@@ -119,18 +120,19 @@ plot.df <-
             weight
         )
     ) %>%
+    # Filter for relevant contacts
     mutate(contact.dist=range2 - range1) %>% 
-    # filter(between(contact.dist, dist.min - RESOLUTION, dist.max + RESOLUTION)) %>% 
-    filter(between(contact.dist, dist.min, dist.max)) %>% 
+    # filter(between(contact.dist, dist.min, dist.max)) %>% 
+    filter(between(contact.dist, dist.min - RESOLUTION, dist.max + RESOLUTION)) %>% 
     left_join(colors.and.titles, by='region') %>% 
     mutate(region.color=ifelse(is.na(region.color), '#808080', region.color)) %>%
+    filter(IF > 0) %>%
     # Number samples for faceting plots
     nest(data=-c(Edit, Celltype, Genotype, is.Merged, Sample.ID)) %>% 
     arrange(is.Merged, Genotype) %>% 
     group_by(Edit, Celltype, Genotype) %>% 
     mutate(ReplicateNum=as.character(row_number())) %>%
     ungroup() %>% 
-    unnest(data) %>% 
     mutate(
         ReplicateNum=
             ifelse(
@@ -138,7 +140,12 @@ plot.df <-
                 'Merged',
                 glue('Bio Replicate {ReplicateNum}')
             )
-    )
+    ) %>% 
+    unnest(data) %>% 
+    # Plot visuals
+    left_join(colors.and.titles, by='region') %>% 
+    mutate(region.color=ifelse(is.na(region.color), '#808080', region.color)) %>%
+    mutate(Genotype=factor(Genotype, levels=c('WT', 'DEL', 'DUP')))
 plot.df %>% dplyr::count(Sample.ID, region.title)
 ```
 
